# os

./: Cargo.toml  README.md
.claude/: settings.local.json
crates/control-plane/: Cargo.toml
crates/desktop-native/: Cargo.toml
crates/desktop-native/src/: app_launcher.rs  assistant.rs  auto_save.rs  browser.rs  calculator.rs  clipboard.rs  color_picker.rs  console.rs  dictionary.rs  disk_utility.rs  embedded_app.rs  emoji_picker.rs  file_index.rs  file_tags.rs  font_book.rs  icons.rs  main.rs  messages.rs  music_audio.rs  network_diag.rs  notifications.rs  process_manager.rs  quick_look.rs  screensaver.rs  settings.rs  terminal.rs  toast.rs  types.rs  user_profile.rs  window.rs
crates/desktop-preview/: Cargo.toml
crates/init/: Cargo.toml
crates/ipc/: Cargo.toml
crates/shell/: Cargo.toml
crates/svc-manager/: Cargo.toml
desktop/: app.js  index.html  package-lock.json  package.json  styles.css
desktop/modules/: accessibility.js  activity-monitor.js  airdrop.js  automator.js  bluetooth.js  calendar-events.js  clipboard-history.js  contacts.js  dark-mode.js  disk-utility.js  finder-tags.js  font-book.js  i18n.js  keychain.js  network-manager.js  notes.js  notification-center.js  reminders.js  screenshot.js  share-sheet.js  siri.js  spaces.js  spotlight-indexer.js  startup-items.js  system-preferences.js  terminal.js  time-machine.js  undo-redo.js  voice-memos.js  window-snapping.js
docs/: GITHUB_ISSUES.md  OS_ROADMAP.md
profiles/: bootstrap.commands  default.services  desktop-layout.txt
scripts/: run-all.cmd  run-desktop.cmd  run-desktop.ps1
(+37 files in other folders)
