[package]
name = "desktop-native"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
eframe = "0.33"
ipc = { path = "../ipc" }
sysinfo = "0.33"
battery = "0.7"
chrono = "0.4"
walkdir = "2"
portable-pty = "0.8"
sha2 = "0.10"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
